--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@ a:hover {
 }
 
 body {
-    background-image: url("images/herringbone.png");    
+    background-image: url("../images/herringbone.png");    
 }
 
 .wordwrap {  
