Change Font Colors
Changed the font colors.

--- a/css/styles.css
+++ b/css/styles.css
@@ -29,13 +29,13 @@ body {
      padding-top: 20px;
      text-align: center;
      font-family: 'Didact Gothic', sans-serif;
-     color: white;
+     color: black;
  }
 
  #uWere {
     text-align: center;
     font-family: 'Didact Gothic', sans-serif;
-    color: white;
+    color: black;
 }
 
 #genderRadio1label {
